test/tasty/neg/src-2/TestHKNest3.check
TestHKNest3_fail.scala:6: error: Unsupported Scala 3 curried type application F[T][U] in signature of method foo
  def test13 = new HKClass_13[HKLam].foo[Int,String](("",0)) // error: unsupported curried type application
                                     ^
TestHKNest3_fail.scala:7: error: Unsupported Scala 3 curried type application F[T][U] in signature of method foo
  def test16 = new HKClass_16[List].foo[HKLam,Int,String](("",0) :: Nil)
                                    ^
2 errors
